moving index.html

--- a/Pages/feedbackForm.html
+++ b/Pages/feedbackForm.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="page4Container">
-        <a href="/Pages/index.html"><img class="nasaIcon" src="/Media/Images/nasaIcon.png"></a>
+        <a href="../index.html"><img class="nasaIcon" src="/Media/Images/nasaIcon.png"></a>
         <a id="imgofthedaybuttonpg4" href="/Pages/nasaImageOfTheDayPage.html" class="glow-btn">Image of the day</a>
         <a id="eventsBtnPg4" href="/Pages/nasaEvents.html" class="glow-btn">Events</a>
 
