--- a/Pages/nasaImageOfTheDayPage.html
+++ b/Pages/nasaImageOfTheDayPage.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="page2Container">
-        <a href="/Pages/index.html"><img class="nasaIcon" src="/Media/Images/nasaIcon.png"></a>
+        <a href="../index.html"><img class="nasaIcon" src="/Media/Images/nasaIcon.png"></a>
         <a id="eventsBtnPg2" class="glow-btn" href="/Pages/nasaEvents.html">Events</a>
         <a id="FeedbackBtnPg2" class="glow-btn" href="/Pages/feedbackForm.html">Feedback</a>
         <section class="mb-4">
