--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <source src="/Media/Video/nasaVid.mp4" type="video/mp4" media="screen and (min-device-width:1000px)" >
         </video>
 
-        <a href="/Pages/index.html"><img class="nasaIcon" src="/Media/Images/nasaIcon.png"></a>
+        <a href="index.html"><img class="nasaIcon" src="/Media/Images/nasaIcon.png"></a>
         <a id="imgofthedaybuttonpg1" href="/Pages/nasaImageOfTheDayPage.html" class="glow-btn">Image of the day</a>
         <a id="eventsBtnPg1" class="glow-btn" href="/Pages/nasaEvents.html">Events</a>
         <a id="FeedbackBtnPg1" class="glow-btn" href="/Pages/feedbackForm.html">Feedback</a>
