--- a/Pages/nasaEvents.html
+++ b/Pages/nasaEvents.html
@@ -17,7 +17,7 @@
 
     <div class="page3Container">
 
-        <a href="/Pages/index.html"><img class="nasaIcon" src="/Media/Images/nasaIcon.png"></a>
+        <a href="../index.html"><img class="nasaIcon" src="/Media/Images/nasaIcon.png"></a>
         <a id="imgofthedaybuttonpg3" href="/Pages/nasaImageOfTheDayPage.html" class="glow-btn">Image of the day</a>
         <a id="FeedbackBtnPg3" href="/Pages/feedbackForm.html" class="glow-btn">Feedback</a>
 
