--- a/Pages/thankYouPage.html
+++ b/Pages/thankYouPage.html
@@ -15,9 +15,9 @@
 
 <body>
     <div class="page5Container">
-        <a href="/Pages/index.html"><img class="nasaIcon" src="/Media/Images/nasaIcon.png"></a>
+        <a href="../index.html"><img class="nasaIcon" src="/Media/Images/nasaIcon.png"></a>
         <h1 id="thankYouResponse">Thank you for your feedback!</h1>
-        <a id="feedbackRtnHomeBtn" href="/Pages/index.html" class="glow-btn">Home page</a>
+        <a id="feedbackRtnHomeBtn" href="../index.html" class="glow-btn">Home page</a>
 
         <div class="paperplane">
             <div class="plane">
