--- a/Pages/nasaEvents.html
+++ b/Pages/nasaEvents.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NASA Events</title>
-    <link rel="shortcut Icon" href="/Media/Images/nasalogoicon.ico">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="shortcut Icon" href="Media/Images/nasalogoicon.ico">
+    <link rel="stylesheet" href="CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
@@ -17,9 +17,9 @@
 
     <div class="page3Container">
 
-        <a href="../index.html"><img class="nasaIcon" src="/Media/Images/nasaIcon.png"></a>
-        <a id="imgofthedaybuttonpg3" href="/Pages/nasaImageOfTheDayPage.html" class="glow-btn">Image of the day</a>
-        <a id="FeedbackBtnPg3" href="/Pages/feedbackForm.html" class="glow-btn">Feedback</a>
+        <a href="../index.html"><img class="nasaIcon" src="Media/Images/nasaIcon.png"></a>
+        <a id="imgofthedaybuttonpg3" href="Pages/nasaImageOfTheDayPage.html" class="glow-btn">Image of the day</a>
+        <a id="FeedbackBtnPg3" href="Pages/feedbackForm.html" class="glow-btn">Feedback</a>
 
 
         <div id='EventContainer'>
@@ -45,7 +45,7 @@
         <div id="map"></div>
 
 
-        <img id="issPicture" src="/Media/Images/internationalSpaceStationImage1.jpg">
+        <img id="issPicture" src="Media/Images/internationalSpaceStationImage1.jpg">
 
 
     </div>
