--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut Icon" href="/Media/Images/nasalogoicon.ico">
+    <link rel="shortcut Icon" href="Media/Images/nasalogoicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
@@ -17,14 +17,14 @@
     <div class="homepage">
         <h1 id="title">NASA EVENTS</h1>
         <video id="video" height=100% width=130% autoplay loop muted infinite>//
-            <source src="/Media/Video/nasaVid.mp4" type="video/mp4" />
-            <source src="/Media/Video/nasaVid.mp4" type="video/mp4" media="screen and (min-device-width:1000px)" >
+            <source src="Media/Video/nasaVid.mp4" type="video/mp4" />
+            <source src="Media/Video/nasaVid.mp4" type="video/mp4" media="screen and (min-device-width:1000px)" >
         </video>
 
-        <a href="index.html"><img class="nasaIcon" src="/Media/Images/nasaIcon.png"></a>
-        <a id="imgofthedaybuttonpg1" href="/Pages/nasaImageOfTheDayPage.html" class="glow-btn">Image of the day</a>
-        <a id="eventsBtnPg1" class="glow-btn" href="/Pages/nasaEvents.html">Events</a>
-        <a id="FeedbackBtnPg1" class="glow-btn" href="/Pages/feedbackForm.html">Feedback</a>
+        <a href="index.html"><img class="nasaIcon" src="Media/Images/nasaIcon.png"></a>
+        <a id="imgofthedaybuttonpg1" href="Pages/nasaImageOfTheDayPage.html" class="glow-btn">Image of the day</a>
+        <a id="eventsBtnPg1" class="glow-btn" href="Pages/nasaEvents.html">Events</a>
+        <a id="FeedbackBtnPg1" class="glow-btn" href="Pages/feedbackForm.html">Feedback</a>
     </div>
 </body>
 
