reference update 2 and link

--- a/Pages/feedbackForm.html
+++ b/Pages/feedbackForm.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NASA Events</title>
-    <link rel="shortcut Icon" href="Media/Images/nasalogoicon.ico">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="shortcut Icon" href="../Media/Images/nasalogoicon.ico">
+    <link rel="stylesheet" href="../CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
@@ -15,21 +15,21 @@
 
 <body>
     <div class="page4Container">
-        <a href="../index.html"><img class="nasaIcon" src="Media/Images/nasaIcon.png"></a>
-        <a id="imgofthedaybuttonpg4" href="Pages/nasaImageOfTheDayPage.html" class="glow-btn">Image of the day</a>
-        <a id="eventsBtnPg4" href="Pages/nasaEvents.html" class="glow-btn">Events</a>
+        <a href="../index.html"><img class="nasaIcon" src="../Media/Images/nasaIcon.png"></a>
+        <a id="imgofthedaybuttonpg4" href="nasaImageOfTheDayPage.html" class="glow-btn">Image of the day</a>
+        <a id="eventsBtnPg4" href="nasaEvents.html" class="glow-btn">Events</a>
 
         <h1 id="contactus">Contact Form</h1>
 
         <div class="bg">
-            <form action="Pages/thankYouPage.html">
+            <form action="thankYouPage.html">
                 <input id="nameForm" type="text" name="name" placeholder="Name">
                 <input id="emailForm" type="text" name="email" placeholder="Email">
                 <textarea id="messageForm" name="text" placeholder="Message"></textarea>
                 <input id="submitForm" type="submit" class="submit">
             </form>
         </div>
-        <img id="feedbackWallpaper" src="Media/Images/astronaut.jpg">
+        <img id="feedbackWallpaper" src="../Media/Images/astronaut.jpg">
     </div>
 </body>
 
