--- a/Pages/nasaImageOfTheDayPage.html
+++ b/Pages/nasaImageOfTheDayPage.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NASA Events</title>
-    <link rel="shortcut Icon" href="Media/Images/nasalogoicon.ico">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="shortcut Icon" href="../Media/Images/nasalogoicon.ico">
+    <link rel="stylesheet" href="../CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
@@ -18,9 +18,9 @@
 
 <body>
     <div class="page2Container">
-        <a href="../index.html"><img class="nasaIcon" src="Media/Images/nasaIcon.png"></a>
-        <a id="eventsBtnPg2" class="glow-btn" href="Pages/nasaEvents.html">Events</a>
-        <a id="FeedbackBtnPg2" class="glow-btn" href="Pages/feedbackForm.html">Feedback</a>
+        <a href="../index.html"><img class="nasaIcon" src="../Media/Images/nasaIcon.png"></a>
+        <a id="eventsBtnPg2" class="glow-btn" href="nasaEvents.html">Events</a>
+        <a id="FeedbackBtnPg2" class="glow-btn" href="feedbackForm.html">Feedback</a>
         <section class="mb-4">
             <div>
                 <input id="date-picker"></input>
@@ -34,6 +34,6 @@
     </div>
 </body>
 
-<script src="Javascripts/nasaImageOfTheDay.js"></script>
+<script src="../Javascripts/nasaImageOfTheDay.js"></script>
 
 </html>
