--- a/Pages/thankYouPage.html
+++ b/Pages/thankYouPage.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NASA Events</title>
-    <link rel="shortcut Icon" href="Media/Images/nasalogoicon.ico">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="shortcut Icon" href="../Media/Images/nasalogoicon.ico">
+    <link rel="stylesheet" href="../CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 
 <body>
     <div class="page5Container">
-        <a href="../index.html"><img class="nasaIcon" src="Media/Images/nasaIcon.png"></a>
+        <a href="../index.html"><img class="nasaIcon" src="../Media/Images/nasaIcon.png"></a>
         <h1 id="thankYouResponse">Thank you for your feedback!</h1>
         <a id="feedbackRtnHomeBtn" href="../index.html" class="glow-btn">Home page</a>
 
